# PlayStoreScraper

./: .gitignore  PlayStore-Reviews-Analyzer.spec  README.md  app.py  app_exe.py  build_exe.py  pyproject.toml  styles.py  utils.py  version_info.txt
