[project]
name = "play-store-scraper"
version = "0.1.0"
description = "Application pour extraire les avis du Google Play Store"
requires-python = ">=3.8"
dependencies = [
    "customtkinter>=5.2.0",
    "fpdf2>=2.7.6",
    "google-play-scraper>=1.2.7",
    "pandas>=2.2.3",
    "pillow>=10.0.0",
    "openpyxl>=3.1.2",
    "pyinstaller>=6.3.0",
]
